# commvault-mcp-server

./: .env.example  README.md  pyproject.toml  setup.py
src/: cv_api_client.py
src/auth/: auth_service.py
src/tools/: __init__.py  salesforce_tools.py  storage_tools.py
tests/: conftest.py  test_plan_tools.py
