[project]
name = "commvault-mcp-server"
version = "0.1.0"
description = "Commvault's Official MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.49",
    "fastmcp>=3.0.0",
    "keyring>=25.6.0",
    "pyfiglet>=1.0.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
    "authlib>=1.6.7",
]

[tool.uv]
constraint-dependencies = [
    "cryptography>=46.0.5",
    "jaraco-context>=6.1.0",
]
